add get user profile handler
